--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "bhim",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.11",
     "nodemon": "^3.0.1"
   }
 }
