--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build:ui": "rm -rf dist && cd ../ContactBook/ && npm run build && cp -r dist ../ContactBackend",
     "dev": "nodemon index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,10 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.11",
+    "eslint": "^8.55.0",
     "nodemon": "^3.0.1"
   }
 }
