--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "build:ui": "rm -rf dist && cd ../ContactBook/ && npm run build && cp -r dist ../ContactBackend",
     "dev": "nodemon index.js ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "bhim",
   "license": "ISC",
